Fixed bug where scroll bar would go behind tab+address bar Improved padding of page titles

--- a/no_bullet_threading.css
+++ b/no_bullet_threading.css
@@ -1355,6 +1355,14 @@ html.is-native-iphone #left-sidebar {
   font-weight: 400;
 }
 
+#main-content-container {
+  margin-top: calc(var(--awUI-tabs-height) + var(--awUI-head-height)) !important;
+  padding-top: 40px !important;
+}
+#main-content-container div.cp__sidebar-main-content {
+  margin-top: 0 !important;
+}
+
 :root {
   --ct-page-title-color: var(--ct-bold-color);
   --ct-page-title-font-size: 36px;
@@ -1373,7 +1381,8 @@ html.is-native-iphone #left-sidebar {
 
 /* Heading & Page title */
 h1.title {
-  padding-bottom: 5px;
+  margin-bottom: 8px;
+  padding-bottom: 0;
   font-family: var(--ct-page-title-font-family);
   font-size: var(--ct-page-title-font-size);
   font-weight: var(--ct-page-title-font-weight);
