--- a/src/_headings.scss
+++ b/src/_headings.scss
@@ -18,8 +18,8 @@
 
 /* Heading & Page title */
 h1.title {
-  // margin-top: 8px;
-  padding-bottom: 5px;
+  margin-bottom: 8px;
+  padding-bottom: 0;
   font-family: var(--ct-page-title-font-family);
   font-size: var(--ct-page-title-font-size);
   font-weight: var(--ct-page-title-font-weight);
